[stdlib] Add FieldAccessor
Add FieldAccessor, a construct that enables pointer operations on stored properties inside class instances.

The idea is to initialize a field accessor struct once for each atomic stored property. Once initialized, the field updater provides efficient atomic operations. (It simply caches the offset of the stored property within the class, then uses it to set a direct pointer to the stored property.)

This works okay, but it’s quite boilerplatey. Also, leaving the raw non-atomic stored properties visible is a bad idea.

final class Foo {
  private var _v: Int = 0
  private var _w: Int = 0

  private static let _vField = FieldAccessor<Foo>(for: \Foo._v)
  private static let _wField = FieldAccessor<Foo>(for: \Foo._w)
}

func test(_ foo: Foo) {
  Foo._vField.withUnsafeMutablePointer(in: foo) { ptr in
    ...
  }
}

--- a/stdlib/public/core/CMakeLists.txt
+++ b/stdlib/public/core/CMakeLists.txt
@@ -61,6 +61,7 @@ set(SWIFTLIB_ESSENTIAL
   EmptyCollection.swift
   Equatable.swift
   ErrorType.swift
+  FieldAccessor.swift
   Filter.swift
   FixedArray.swift
   FlatMap.swift
