[AutoDiff] Move stdlib sources to stdlib/public/core/Differentiation.
Move differentiable-programming-related stdlib sources to
`stdlib/public/core/Differentiation`.

Related master branch PR: https://github.com/apple/swift/pull/27511.
master branch will have a `_Differentiation` support library containing
the `Differentiable` protocol and related APIs.

On tensorflow branch, the Swift source files in
`stdlib/public/core/Differentiation` will be directly built as part of
swiftCore for simplicity. Swift for TensorFlow users can continue to use
the `Differentiable` protocol and related APIs without adding
`import _Differentiation`.

Rename `protocol _Differentiable` back to `protocol Differentiable`.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -134,9 +134,11 @@ normalize_boolean_spelling(SWIFT_AST_VERIFIER)
 normalize_boolean_spelling(SWIFT_ASAN_BUILD)
 normalize_boolean_spelling(SWIFT_BUILD_SYNTAXPARSERLIB)
 normalize_boolean_spelling(SWIFT_ENABLE_SOURCEKIT_TESTS)
+normalize_boolean_spelling(SWIFT_ENABLE_EXPERIMENTAL_DIFFERENTIABLE_PROGRAMMING)
 # SWIFT_ENABLE_TENSORFLOW
 normalize_boolean_spelling(SWIFT_ENABLE_TENSORFLOW)
 normalize_boolean_spelling(SWIFT_ENABLE_TENSORFLOW_GPU)
+# SWIFT_ENABLE_TENSORFLOW END
 is_build_type_optimized("${SWIFT_STDLIB_BUILD_TYPE}" SWIFT_OPTIMIZED)
 
 set(profdata_merge_worker
@@ -316,6 +318,10 @@ _Block_release(void) { }\n")
       endif()
 
       list(APPEND LIT_ARGS "--xunit-xml-output=${SWIFT_TEST_RESULTS_DIR}/lit-tests.xml")
+
+      if(SWIFT_ENABLE_EXPERIMENTAL_DIFFERENTIABLE_PROGRAMMING)
+        list(APPEND LIT_ARGS "--param" "differentiable_programming")
+      endif()
 
       foreach(test_subset ${TEST_SUBSETS})
         set(directories)
