--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -345,6 +345,10 @@ swift_version = lit_config.params.get('swift-version',
 lit_config.note('Compiling with -swift-version ' + swift_version)
 config.swift_test_options = '-swift-version ' + swift_version
 
+differentiable_programming = lit_config.params.get('differentiable_programming', None)
+if differentiable_programming is not None:
+    config.available_features.add('differentiable_programming')
+
 # SWIFT_ENABLE_TENSORFLOW
 swift_tensorflow_test_run_extra_options = ''
 swift_tensorflow_extra_options = ''
@@ -363,6 +367,7 @@ else:
     config.substitutions.append( ('%filecheck-tensorflow-extra-options', '') )
 config.substitutions.append( ('%swift-tensorflow-extra-options', swift_tensorflow_extra_options) )
 config.substitutions.append( ('%swift-tensorflow-test-run-extra-options', swift_tensorflow_test_run_extra_options) )
+# SWIFT_ENABLE_TENSORFLOW END
 
 test_options = os.environ.get('SWIFT_TEST_OPTIONS')
 if test_options:
