--- a/utils/update_checkout/update-checkout-config.json
+++ b/utils/update_checkout/update-checkout-config.json
@@ -2,15 +2,9 @@
     "ssh-clone-pattern": "git@github.com:%s.git",
     "https-clone-pattern": "https://github.com/%s.git",
     "repos" : {
-        "llvm": {
-            "remote": { "id": "apple/swift-llvm" } },
-        "clang": {
-            "remote": { "id": "apple/swift-clang" } },
-        "swift": {
+       "swift": {
             "remote": { "id": "apple/swift" } },
-        "lldb": {
-            "remote": { "id": "apple/swift-lldb" } },
-        "cmark": {
+       "cmark": {
             "remote": { "id": "apple/swift-cmark" } },
         "llbuild": {
             "remote": { "id": "apple/swift-llbuild" } },
@@ -20,8 +14,6 @@
             "remote": { "id": "apple/swift-syntax" } },
         "swift-stress-tester": {
             "remote": { "id": "apple/swift-stress-tester" } },
-        "compiler-rt": {
-            "remote": { "id": "apple/swift-compiler-rt" } },
         "swift-corelibs-xctest": {
             "remote": { "id": "apple/swift-corelibs-xctest" } },
         "swift-corelibs-foundation": {
@@ -38,30 +30,31 @@
             "remote": { "id": "unicode-org/icu" },
             "platforms": [ "Linux" ]
         },
-        "libcxx": {
-            "remote": { "id": "apple/swift-libcxx" } },
-        "clang-tools-extra": {
-            "remote": { "id": "apple/swift-clang-tools-extra" } },
-        "indexstore-db": {
+        "cmake": {
+            "remote": { "id": "KitWare/CMake" },
+            "platforms": [ "Linux" ]
+        },
+       "indexstore-db": {
             "remote": { "id": "apple/indexstore-db" } },
         "sourcekit-lsp": {
-            "remote": { "id": "apple/sourcekit-lsp" } }
+            "remote": { "id": "apple/sourcekit-lsp" } },
+        "swift-format": {
+            "remote": { "id": "apple/swift-format" } },
+        "llvm-project": {
+            "remote": { "id": "apple/llvm-project" } }
     },
     "default-branch-scheme": "master",
     "branch-schemes": {
-        "master": {
-            "aliases": ["master", "stable"],
+       "master": {
+            "aliases": ["master", "swift/master"],
             "repos": {
-                "llvm": "stable",
-                "clang": "stable",
+                "llvm-project": "swift/master",
                 "swift": "master",
-                "lldb": "stable",
                 "cmark": "master",
                 "llbuild": "master",
                 "swiftpm": "master",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
-                "compiler-rt": "stable",
                 "swift-corelibs-xctest": "master",
                 "swift-corelibs-foundation": "master",
                 "swift-corelibs-libdispatch": "master",
@@ -69,8 +62,7 @@
                 "swift-xcode-playground-support": "master",
                 "ninja": "release",
                 "icu": "release-61-1",
-                "clang-tools-extra": "stable",
-                "libcxx": "stable",
+                "cmake": "v3.15.1",
                 "indexstore-db": "master",
                 "sourcekit-lsp": "master"
             }
@@ -80,11 +72,8 @@
                         "stable-next", "upstream",
                         "next-upstream", "upstream-with-swift"],
             "repos": {
-                "llvm": "upstream-with-swift",
-                "clang": "upstream-with-swift",
-                "compiler-rt": "upstream-with-swift",
+                "llvm-project": "swift/master-next",
                 "swift": "master-next",
-                "lldb": "upstream-with-swift",
                 "cmark": "master",
                 "llbuild": "master",
                 "swiftpm": "master",
@@ -97,25 +86,20 @@
                 "swift-xcode-playground-support": "master",
                 "ninja": "release",
                 "icu": "release-61-1",
-                "clang-tools-extra": "upstream-with-swift",
-                "libcxx": "upstream-with-swift",
+                "cmake": "v3.15.1",
                 "indexstore-db": "master",
                 "sourcekit-lsp": "master"
             }
         },
-        "swift-3.0-branch" : {
+       "swift-3.0-branch" : {
             "aliases": ["swift-3.0-branch"],
             "repos": {
-                "llvm": "swift-3.0-branch",
-                "clang": "swift-3.0-branch",
-                "swift": "swift-3.0-branch",
-                "lldb": "swift-3.0-branch",
+                "llvm-project": "swift/swift-3.0-branch",
                 "cmark": "swift-3.0-branch",
                 "llbuild": "swift-3.0-branch",
                 "swiftpm": "swift-3.0-branch",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
-                "compiler-rt": "swift-3.0-branch",
                 "swift-corelibs-xctest": "swift-3.0-branch",
                 "swift-corelibs-foundation": "swift-3.0-branch",
                 "swift-corelibs-libdispatch": "swift-3.0-branch",
@@ -129,16 +113,13 @@
         "swift-3.1-branch" : {
             "aliases": ["swift-3.1-branch"],
             "repos": {
-                "llvm": "swift-3.1-branch",
-                "clang": "swift-3.1-branch",
+                "llvm-project": "swift/swift-3.1-branch",
                 "swift": "swift-3.1-branch",
-                "lldb": "swift-3.1-branch",
                 "cmark": "swift-3.1-branch",
                 "llbuild": "swift-3.1-branch",
                 "swiftpm": "swift-3.1-branch",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
-                "compiler-rt": "swift-3.1-branch",
                 "swift-corelibs-xctest": "swift-3.1-branch",
                 "swift-corelibs-foundation": "swift-3.1-branch",
                 "swift-corelibs-libdispatch": "swift-3.1-branch",
@@ -152,16 +133,13 @@
         "swift-4.0-branch" : {
             "aliases": ["swift-4.0-branch"],
             "repos": {
-                "llvm": "swift-4.0-branch",
-                "clang": "swift-4.0-branch",
+                "llvm-project": "swift/swift-4.0-branch",
                 "swift": "swift-4.0-branch",
-                "lldb": "swift-4.0-branch",
                 "cmark": "swift-4.0-branch",
                 "llbuild": "swift-4.0-branch",
                 "swiftpm": "swift-4.0-branch",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
-                "compiler-rt": "swift-4.0-branch",
                 "swift-corelibs-xctest": "swift-4.0-branch",
                 "swift-corelibs-foundation": "swift-4.0-branch",
                 "swift-corelibs-libdispatch": "swift-4.0-branch",
@@ -175,16 +153,13 @@
         "swift-4.1-branch" : {
             "aliases": ["swift-4.1-branch"],
             "repos": {
-                "llvm": "swift-4.1-branch",
-                "clang": "swift-4.1-branch",
+                "llvm-project": "swift/swift-4.1-branch",
                 "swift": "swift-4.1-branch",
-                "lldb": "swift-4.1-branch",
                 "cmark": "swift-4.1-branch",
                 "llbuild": "swift-4.1-branch",
                 "swiftpm": "swift-4.1-branch",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
-                "compiler-rt": "swift-4.1-branch",
                 "swift-corelibs-xctest": "swift-4.1-branch",
                 "swift-corelibs-foundation": "swift-4.1-branch",
                 "swift-corelibs-libdispatch": "swift-4.1-branch",
@@ -198,16 +173,13 @@
         "swift-4.2-branch" : {
             "aliases": ["swift-4.2-branch"],
             "repos": {
-                "llvm": "swift-4.2-branch",
-                "clang": "swift-4.2-branch",
+                "llvm-project": "swift/swift-4.2-branch",
                 "swift": "swift-4.2-branch",
-                "lldb": "swift-4.2-branch",
                 "cmark": "swift-4.2-branch",
                 "llbuild": "swift-4.2-branch",
                 "swiftpm": "swift-4.2-branch",
                 "swift-syntax": "swift-4.2-branch",
                 "swift-stress-tester": "master",
-                "compiler-rt": "swift-4.2-branch",
                 "swift-corelibs-xctest": "swift-4.2-branch",
                 "swift-corelibs-foundation": "swift-4.2-branch",
                 "swift-corelibs-libdispatch": "swift-4.2-branch",
@@ -221,11 +193,8 @@
         "swift-5.0-branch" : {
             "aliases": ["swift-5.0-branch"],
             "repos": {
-                "llvm": "swift-5.0-branch",
-                "clang": "swift-5.0-branch",
-                "compiler-rt": "swift-5.0-branch",
+                "llvm-project": "swift/swift-5.0-branch",
                 "swift": "swift-5.0-branch",
-                "lldb": "swift-5.0-branch",
                 "cmark": "swift-5.0-branch",
                 "llbuild": "swift-5.0-branch",
                 "swiftpm": "swift-5.0-branch",
@@ -238,97 +207,15 @@
                 "swift-xcode-playground-support": "swift-5.0-branch",
                 "ninja": "release",
                 "icu": "release-61-1",
-                "clang-tools-extra": "swift-5.0-branch",
-                "libcxx": "swift-5.0-branch",
                 "indexstore-db": "master",
                 "sourcekit-lsp": "master"
             }
         },
-        "swift-5.1-old-llvm-branch" : {
-            "aliases": ["swift-5.1-old-llvm-branch"],
+       "swift-5.1-branch" : {
+            "aliases": ["swift-5.1-branch", "swift/swift-5.1-branch"],
             "repos": {
-                "llvm": "swift-5.0-branch",
-                "clang": "swift-5.0-branch",
-                "compiler-rt": "swift-5.0-branch",
-                "swift": "swift-5.1-old-llvm-branch",
-                "lldb": "stable",
-                "cmark": "master",
-                "llbuild": "master",
-                "swiftpm": "master",
-                "swift-syntax": "master",
-                "swift-stress-tester": "master",
-                "swift-corelibs-xctest": "master",
-                "swift-corelibs-foundation": "master",
-                "swift-corelibs-libdispatch": "master",
-                "swift-integration-tests": "master",
-                "swift-xcode-playground-support": "master",
-                "ninja": "release",
-                "icu": "release-61-1",
-                "clang-tools-extra": "swift-5.0-branch",
-                "libcxx": "swift-5.0-branch",
-                "indexstore-db": "master",
-                "sourcekit-lsp": "master"
-            }
-        },
-        "swift-5.1-branch" : {
-            "aliases": ["swift-5.1-branch"],
-            "repos": {
-                "llvm": "swift-5.1-branch",
-                "clang": "swift-5.1-branch",
-                "compiler-rt": "swift-5.1-branch",
+                "llvm-project": "swift/swift-5.1-branch",
                 "swift": "swift-5.1-branch",
-                "lldb": "swift-5.1-branch",
-                "cmark": "master",
-                "llbuild": "swift-5.1-branch",
-                "swiftpm": "swift-5.1-branch",
-                "swift-syntax": "swift-5.1-branch",
-                "swift-stress-tester": "swift-5.1-branch",
-                "swift-corelibs-xctest": "swift-5.1-branch",
-                "swift-corelibs-foundation": "swift-5.1-branch",
-                "swift-corelibs-libdispatch": "swift-5.1-branch",
-                "swift-integration-tests": "swift-5.1-branch",
-                "swift-xcode-playground-support": "swift-5.1-branch",
-                "ninja": "release",
-                "icu": "release-61-1",
-                "clang-tools-extra": "swift-5.1-branch",
-                "libcxx": "swift-5.1-branch",
-                "indexstore-db": "swift-5.1-branch",
-                "sourcekit-lsp": "swift-5.1-branch"
-            }
-        },
-        "swift-5.1-branch-04-24-2019" : {
-            "aliases": ["swift-5.1-branch-04-24-2019"],
-            "repos": {
-                "llvm": "swift-5.1-branch",
-                "clang": "swift-5.1-branch",
-                "compiler-rt": "swift-5.1-branch",
-                "swift": "swift-5.1-branch-04-24-2019",
-                "lldb": "swift-5.1-branch",
-                "cmark": "master",
-                "llbuild": "swift-5.1-branch",
-                "swiftpm": "swift-5.1-branch",
-                "swift-syntax": "swift-5.1-branch-04-24-2019",
-                "swift-stress-tester": "swift-5.1-branch",
-                "swift-corelibs-xctest": "swift-5.1-branch",
-                "swift-corelibs-foundation": "swift-5.1-branch",
-                "swift-corelibs-libdispatch": "swift-5.1-branch",
-                "swift-integration-tests": "swift-5.1-branch",
-                "swift-xcode-playground-support": "swift-5.1-branch",
-                "ninja": "release",
-                "icu": "release-61-1",
-                "clang-tools-extra": "swift-5.1-branch",
-                "libcxx": "swift-5.1-branch",
-                "indexstore-db": "swift-5.1-branch",
-                "sourcekit-lsp": "swift-5.1-branch"
-            }
-        },
-        "swift-5.1-branch-08-28-2019" : {
-            "aliases": ["swift-5.1-branch-08-28-2019"],
-            "repos": {
-                "llvm": "swift-5.1-branch",
-                "clang": "swift-5.1-branch",
-                "compiler-rt": "swift-5.1-branch",
-                "swift": "swift-5.1-branch-08-28-2019",
                 "lldb": "swift-5.1-branch",
                 "cmark": "swift-5.1-branch",
                 "llbuild": "swift-5.1-branch",
@@ -342,8 +229,27 @@
                 "swift-xcode-playground-support": "swift-5.1-branch",
                 "ninja": "release",
                 "icu": "release-61-1",
-                "clang-tools-extra": "swift-5.1-branch",
-                "libcxx": "swift-5.1-branch",
+                "indexstore-db": "swift-5.1-branch",
+                "sourcekit-lsp": "swift-5.1-branch"
+            }
+        },
+        "swift-5.1-branch-08-28-2019" : {
+            "aliases": ["swift-5.1-branch-08-28-2019"],
+            "repos": {
+                "llvm-project": "swift/swift-5.1-branch",
+                "swift": "swift-5.1-branch-08-28-2019",
+                "cmark": "swift-5.1-branch",
+                "llbuild": "swift-5.1-branch",
+                "swiftpm": "swift-5.1-branch",
+                "swift-syntax": "swift-5.1-branch",
+                "swift-stress-tester": "swift-5.1-branch",
+                "swift-corelibs-xctest": "swift-5.1-branch",
+                "swift-corelibs-foundation": "swift-5.1-branch",
+                "swift-corelibs-libdispatch": "swift-5.1-branch",
+                "swift-integration-tests": "swift-5.1-branch",
+                "swift-xcode-playground-support": "swift-5.1-branch",
+                "ninja": "release",
+                "icu": "release-61-1",
                 "indexstore-db": "swift-5.1-branch",
                 "sourcekit-lsp": "swift-5.1-branch"
             }
