[build-presets] Test the stress tester and swiftevolve as downstream dependencies

--- a/utils/build-presets.ini
+++ b/utils/build-presets.ini
@@ -328,6 +328,12 @@ swiftpm
 indexstore-db
 sourcekit-lsp
 
+swiftsyntax
+swiftsyntax-verify-generated-files
+
+skstresstester
+swiftevolve
+
 # Build Playground support
 playgroundsupport
 
@@ -781,6 +787,7 @@ stress-test
 test-optimized
 foundation
 libdispatch
+swiftsyntax
 indexstore-db
 sourcekit-lsp
 lit-args=-v --time-tests
@@ -1018,6 +1025,7 @@ swiftpm
 xctest
 foundation
 libdispatch
+swiftsyntax
 indexstore-db
 sourcekit-lsp
 dash-dash
@@ -1389,6 +1397,10 @@ install-llbuild
 install-swiftpm
 install-libcxx
 
+# Build the stress tester and SwiftEvolve
+skstresstester
+swiftevolve
+
 # Build Playground support
 playgroundsupport
 
@@ -1580,7 +1592,6 @@ release
 assertions
 swiftsyntax
 swiftsyntax-verify-generated-files
-
 
 #===------------------------------------------------------------------------===#
 # Test Swift Stress Tester
