[lit] Set the use_os_stdlib feature flag in local backdeployment tests, too

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -1461,6 +1461,7 @@ if not kIsWindows:
 			"SIMCTL_CHILD_DYLD_LIBRARY_PATH='{0}' " # Simulator option
 			.format(target_stdlib_path, libdispatch_path)) + config.target_run
 	else:
+		config.available_features.add('use_os_stdlib')
 		os_stdlib_path = ''
 		if run_vendor == 'apple':
 			#If we get swift-in-the-OS for non-Apple platforms, add a condition here
