[build-presets] Install the stress tester in its PR test preset
Check that the install phase also still works.

--- a/utils/build-presets.ini
+++ b/utils/build-presets.ini
@@ -1576,6 +1576,8 @@ release
 assertions
 skstresstester
 swiftevolve
+install-skstresstester
+install-swiftevolve
 
 #===------------------------------------------------------------------------===#
 # Test SourceKit-LSP
