Fix TensorFlow module compilation.
Fix `KeyPathIterable` derived conformances: `KeyPathIterable.allKeyPaths`
synthesis logic now uses different key-path expression coercion logic
to accommodate upstream type-checker changes.

See TF-575 for more information.

--- a/stdlib/public/CMakeLists.txt
+++ b/stdlib/public/CMakeLists.txt
@@ -73,8 +73,8 @@ endif()
 # dependency for `numpy.ndarray` bridging to `ShapedArray`/`Tensor`.
 if(SWIFT_BUILD_STDLIB AND SWIFT_ENABLE_TENSORFLOW)
   # TODO: Add TensorFlow support for iOS/Raspberry Pi.
-  #  add_subdirectory(CTensorFlow)
-  #  add_subdirectory(TensorFlow)
+  add_subdirectory(CTensorFlow)
+  add_subdirectory(TensorFlow)
 endif()
 
 if(SWIFT_BUILD_STDLIB OR SWIFT_BUILD_REMOTE_MIRROR)
