lit: use `gyb.py` instead of `gyb`
On Windows, when `gyb` is used, the import would fail.  This ensures
that we use the tool directly.

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -294,7 +294,7 @@ config.benchmark_driver = inferSwiftBinary('Benchmark_Driver')
 
 config.swift_utils = make_path(config.swift_src_root, 'utils')
 config.line_directive = make_path(config.swift_utils, 'line-directive')
-config.gyb = make_path(config.swift_utils, 'gyb')
+config.gyb = make_path(config.swift_utils, 'gyb.py')
 config.rth = make_path(config.swift_utils, 'rth') # Resilience test helper
 config.scale_test = make_path(config.swift_utils, 'scale-test')
 config.PathSanitizingFileCheck = make_path(config.swift_utils, 'PathSanitizingFileCheck')
