--- a/utils/build-presets.ini
+++ b/utils/build-presets.ini
@@ -847,10 +847,12 @@ skip-build-foundation
 skip-build-xctest
 skip-build-playgroundsupport
 skip-build-benchmarks
+swiftpm=0
 indexstore-db=0
 sourcekit-lsp=0
 toolchain-benchmarks=0
 test-installable-package=
+install-swiftpm=0
 
 [preset: buildbot_linux_crosscompile_android,tools=RA,stdlib=RD,build,aarch64]
 mixin-preset=buildbot_linux_crosscompile_android,tools=RA,stdlib=RD,build
