Update checkout to swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a.

--- a/utils/update_checkout/update-checkout-config.json
+++ b/utils/update_checkout/update-checkout-config.json
@@ -251,30 +251,24 @@
             "aliases": ["tensorflow"],
             "repos": {
                 "llvm-project": "bd31d693aabf94c5d68480408d9a1752ed900ea4",
-                "llvm": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "clang": "0c249864907e436c81b75007c2f9f251d0326c29",
                 "swift": "tensorflow",
-                "lldb": "ca0b2a68f586098c96073e062b19bc0f87a998c6",
-                "cmark": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "llbuild": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "swiftpm": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
+                "cmark": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
+                "llbuild": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
+                "swiftpm": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
                 "swift-syntax": "adc26e4473d53e6b3e1b7945aca495595f07cc41",
-                "swift-stress-tester": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "compiler-rt": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "swift-corelibs-xctest": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "swift-corelibs-foundation": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "swift-corelibs-libdispatch": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "swift-integration-tests": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "swift-xcode-playground-support": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
+                "swift-stress-tester": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
+                "swift-corelibs-xctest": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
+                "swift-corelibs-foundation": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
+                "swift-corelibs-libdispatch": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
+                "swift-integration-tests": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
+                "swift-xcode-playground-support": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
                 "ninja": "release",
                 "icu": "release-61-1",
-                "clang-tools-extra": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "libcxx": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
+                "indexstore-db": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
+                "sourcekit-lsp": "swift-DEVELOPMENT-SNAPSHOT-2019-10-31-a",
                 "tensorflow": "7c7d924821a8b1b20433c2f3f484bbd409873a84",
                 "tensorflow-swift-apis": "e70b979b7a3c2ebd38457b8d4058a0b310b4e4b0",
-                "tensorflow-swift-quote": "62c0a88dc64a201497a66cbbc087c0c7771edabc",
-                "indexstore-db": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a",
-                "sourcekit-lsp": "swift-DEVELOPMENT-SNAPSHOT-2019-10-13-a"
+                "tensorflow-swift-quote": "62c0a88dc64a201497a66cbbc087c0c7771edabc"
             }
         }
     }
