[build-presets] Build the stress tester and SwiftEvolve for SwiftSyntax PR testing

--- a/utils/build-presets.ini
+++ b/utils/build-presets.ini
@@ -1571,6 +1571,8 @@ release
 assertions
 swiftsyntax
 swiftsyntax-verify-generated-files
+skstresstester
+swiftevolve
 
 #===------------------------------------------------------------------------===#
 # Test Swift Stress Tester
