Update the simulator for lit test to use iPhone 8

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -118,7 +118,7 @@ def get_simulator_command(run_os, run_cpu, sdk_path):
             else:
                 return "simctl spawn --standalone 'iPhone 5'"
         else:
-            return "simctl spawn --standalone 'iPhone Xs'"
+            return "simctl spawn --standalone 'iPhone 8'"
     elif run_os == 'tvos':
         return "simctl spawn --standalone 'Apple TV 4K'"
     elif run_os == 'watchos':
