--- a/lib/IRGen/CMakeLists.txt
+++ b/lib/IRGen/CMakeLists.txt
@@ -26,6 +26,8 @@ add_swift_host_library(swiftIRGen STATIC
   GenDecl.cpp
   # SWIFT_ENABLE_TENSORFLOW
   GenDiffFunc.cpp
+  GenDiffWitness.cpp
+  # SWIFT_ENABLE_TENSORFLOW END
   GenEnum.cpp
   GenExistential.cpp
   GenFunc.cpp
