build: relocate toolchain-tools to usr/local
Supports rdar://problem/53670881

--- a/tools/swift-api-digester/CMakeLists.txt
+++ b/tools/swift-api-digester/CMakeLists.txt
@@ -3,6 +3,7 @@ add_swift_host_tool(swift-api-digester
   ModuleAnalyzerNodes.cpp
   ModuleDiagsConsumer.cpp
   SWIFT_COMPONENT toolchain-tools
+  DESTINATION_PREFIX "local/"
 )
 target_link_libraries(swift-api-digester
                       PRIVATE
