--- a/utils/api_checker/CMakeLists.txt
+++ b/utils/api_checker/CMakeLists.txt
@@ -1,12 +1,12 @@
 set(framework "FrameworkABIBaseline")
 swift_install_in_component(PROGRAMS "swift-api-checker.py"
-                           DESTINATION "bin"
+                           DESTINATION "local/bin"
                            COMPONENT toolchain-tools)
 swift_install_in_component(DIRECTORY "sdk-module-lists"
-                           DESTINATION "bin"
+                           DESTINATION "local/bin"
                            COMPONENT toolchain-tools)
 swift_install_in_component(DIRECTORY "${framework}"
-                           DESTINATION "lib/swift"
+                           DESTINATION "local/lib/swift"
                            COMPONENT toolchain-tools)
 
 # Add symlink of FrameworkABIBaseline to the build dir. This ensures we can
