SourceKit: remove `LINK_LIBS` (NFC)
This removes the custom `LINK_LIBS` in favour of
`target_link_libraries`.  This simplifies the custom functions that we
have for adding libraries, makes it easier to query the information from
ninja and will allow us to slowly remove more of the custom logic for
building the products.

--- a/tools/SourceKit/lib/Support/CMakeLists.txt
+++ b/tools/SourceKit/lib/Support/CMakeLists.txt
@@ -5,9 +5,12 @@ add_sourcekit_library(SourceKitSupport
   ImmutableTextBuffer.cpp
   ThreadSafeRefCntPtr.cpp
   Tracing.cpp
-  UIDRegistry.cpp
-  LINK_LIBS swiftBasic swiftSyntax clangBasic clangRewrite
-)
+  UIDRegistry.cpp)
+target_link_libraries(SourceKitSupport PRIVATE
+  swiftBasic
+  swiftSyntax
+  clangBasic
+  clangRewrite)
 if(SWIFT_NEED_EXPLICIT_LIBDISPATCH)
   target_link_libraries(SourceKitSupport INTERFACE dispatch BlocksRuntime)
 endif()
