--- a/tools/SourceKit/tools/complete-test/CMakeLists.txt
+++ b/tools/SourceKit/tools/complete-test/CMakeLists.txt
@@ -1,14 +1,12 @@
-if(SWIFT_SOURCEKIT_USE_INPROC_LIBRARY)
-  set(SOURCEKITD_TEST_LINK_LIBS sourcekitdInProc)
-else()
-  set(SOURCEKITD_TEST_LINK_LIBS sourcekitd)
-endif()
-
 add_sourcekit_executable(complete-test
   complete-test.cpp
-  LINK_LIBS ${SOURCEKITD_TEST_LINK_LIBS}
-  LLVM_LINK_COMPONENTS support option coverage lto
+  LLVM_LINK_COMPONENTS option coverage lto
 )
+if(SWIFT_SOURCEKIT_USE_INPROC_LIBRARY)
+  target_link_libraries(complete-test PRIVATE sourcekitdInProc)
+else()
+  target_link_libraries(complete-test PRIVATE sourcekitd)
+endif()
 if(SWIFT_NEED_EXPLICIT_LIBDISPATCH)
   target_link_libraries(complete-test PRIVATE dispatch BlocksRuntime)
 endif()
