Add `SWIFT_ENABLE_TENSORFLOW`, clarify comments.

--- a/lib/SILOptimizer/Analysis/CMakeLists.txt
+++ b/lib/SILOptimizer/Analysis/CMakeLists.txt
@@ -2,7 +2,9 @@ silopt_register_sources(
   ARCAnalysis.cpp
   AccessSummaryAnalysis.cpp
   AccessedStorageAnalysis.cpp
+  // SWIFT_ENABLE_TENSORFLOW
   ActivityAnalysis.cpp
+  // SWIFT_ENABLE_TENSORFLOW END
   AliasAnalysis.cpp
   Analysis.cpp
   ArraySemantic.cpp
