[AutoDiff] Move ActivityAnalysis to a separate file. (#28489)
* [AutoDiff] Move ActivityAnalysis to a separate file.

--- a/lib/SILOptimizer/Analysis/CMakeLists.txt
+++ b/lib/SILOptimizer/Analysis/CMakeLists.txt
@@ -11,6 +11,9 @@ silopt_register_sources(
   ClosureScope.cpp
   ColdBlockInfo.cpp
   DestructorAnalysis.cpp
+  # SWIFT_ENABLE_TENSORFLOW
+  DifferentiableActivityAnalysis.cpp
+  # SWIFT_ENABLE_TENSORFLOW END
   EscapeAnalysis.cpp
   EpilogueARCAnalysis.cpp
   FunctionOrder.cpp
