Implement Equatable conformance for Void
unused label

--- a/stdlib/public/runtime/CMakeLists.txt
+++ b/stdlib/public/runtime/CMakeLists.txt
@@ -51,6 +51,7 @@ set(swift_runtime_sources
     ImageInspectionCOFF.cpp
     KeyPaths.cpp
     KnownMetadata.cpp
+    KnownProtocolWitnessTables.cpp
     LLVMSupport.cpp
     Metadata.cpp
     MetadataLookup.cpp
