Remove TensorFlow-related lit options.

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -349,26 +349,6 @@ differentiable_programming = lit_config.params.get('differentiable_programming',
 if differentiable_programming is not None:
     config.available_features.add('differentiable_programming')
 
-# SWIFT_ENABLE_TENSORFLOW
-swift_tensorflow_test_run_extra_options = ''
-swift_tensorflow_extra_options = ''
-if 'tensorflow' in config.available_features:
-    swift_tensorflow_extra_options += (' -ltensorflow')
-swift_tensorflow_path = lit_config.params.get('swift_tensorflow_path', None)
-if swift_tensorflow_path:
-    swift_tensorflow_extra_options += (' -L %s' % os.path.abspath(swift_tensorflow_path))
-swift_tensorflow_gpu = lit_config.params.get('swift_tensorflow_gpu', None)
-# Can use #if on CUDA to selectively disable tests for GPU.
-if swift_tensorflow_gpu is not None:
-    swift_tensorflow_extra_options += ' -DCUDA'
-    swift_tensorflow_test_run_extra_options += ' --target=gpu'
-    config.substitutions.append( ('%filecheck-tensorflow-extra-options', ' --check-prefix=CHECK-GPU --check-prefix=CHECK') )
-else:
-    config.substitutions.append( ('%filecheck-tensorflow-extra-options', '') )
-config.substitutions.append( ('%swift-tensorflow-extra-options', swift_tensorflow_extra_options) )
-config.substitutions.append( ('%swift-tensorflow-test-run-extra-options', swift_tensorflow_test_run_extra_options) )
-# SWIFT_ENABLE_TENSORFLOW END
-
 test_options = os.environ.get('SWIFT_TEST_OPTIONS')
 if test_options:
     config.swift_test_options += ' '
@@ -810,13 +790,12 @@ if run_vendor == 'apple':
 
        config.target_build_swift = (
            ("%s %s %s -F %r -toolchain-stdlib-rpath " +
-            "-Xlinker -rpath -Xlinker %r %s %s %s %s %s") %
+            "-Xlinker -rpath -Xlinker %r %s %s %s %s") %
            (xcrun_prefix, config.swiftc, target_options,
             extra_frameworks_dir,
             "/tmp/swifttest-device/lib",
             sdk_overlay_linker_opt, config.swift_test_options,
             config.swift_driver_test_options,
-            swift_tensorflow_extra_options,
             swift_execution_tests_extra_flags))
        config.target_run = "unsupported"
 
@@ -850,7 +829,6 @@ if run_vendor == 'apple':
              extra_frameworks_dir,
              sdk_overlay_linker_opt, config.swift_test_options,
              config.swift_driver_test_options,
-             swift_tensorflow_extra_options,
              swift_execution_tests_extra_flags))
         # FIXME: allow specification of simulator and version
         #
@@ -881,13 +859,12 @@ if run_vendor == 'apple':
 
         config.target_build_swift = (
             ("%s %s %s -F %r -toolchain-stdlib-rpath "
-             + "-Xlinker -rpath -Xlinker %r %s %s %s %s %s "
+             + "-Xlinker -rpath -Xlinker %r %s %s %s %s "
              + "-F %r -Xlinker -rpath -Xlinker %r")
             % (xcrun_prefix, config.swiftc, target_options,
                extra_frameworks_dir, extra_frameworks_dir,
                sdk_overlay_linker_opt, config.swift_test_options,
                config.swift_driver_test_options,
-               swift_tensorflow_extra_options,
                swift_execution_tests_extra_flags, sourcekitd_framework_dir,
                sourcekitd_framework_dir))
         config.target_run = ""
@@ -1185,8 +1162,7 @@ elif run_os == 'linux-androideabi' or run_os == 'linux-android':
         android_include_paths_opt, android_link_paths_opt,
         '-use-ld=%s' % config.android_linker_name,
         resource_dir_opt, mcp_opt, config.swift_test_options,
-        config.swift_driver_test_options, swift_tensorflow_extra_options,
-        swift_execution_tests_extra_flags])
+        config.swift_driver_test_options, swift_execution_tests_extra_flags])
     config.target_codesign = "echo"
     config.target_build_swift_dylib = ' '.join([
         config.target_build_swift,
@@ -1531,7 +1507,7 @@ if not getattr(config, 'target_run_simple_swift', None):
         '%s %s %%s -o %%t/a.out -module-name main  && '
         '%s %%t/a.out && '
         '%s %%t/a.out'
-        % (config.target_build_swift, mcp_opt, swift_tensorflow_extra_options, config.target_codesign, config.target_run))
+        % (config.target_build_swift, mcp_opt, config.target_codesign, config.target_run))
     config.target_run_stdlib_swift = (
         '%%empty-directory(%%t) && '
         '%s %s %%s -o %%t/a.out -module-name main '
@@ -1558,14 +1534,14 @@ if not getattr(config, 'target_run_simple_swift', None):
         '%%line-directive %%t/main.swift -- '
         '%s %%t/a.out'
         % (config.target_build_swift, mcp_opt, config.target_codesign, config.target_run))
-    # SWIFT_ENABLE_TENSORFLOW	
-    # TODO: Remove when forward mode AD support is robust.	
-    config.target_run_simple_swift_forward_mode_differentiation = (	
-        '%%empty-directory(%%t) && '	
-        '%s %s %%s -enable-experimental-forward-mode-differentiation -o %%t/a.out %s -module-name main  && '
-        '%s %%t/a.out &&'	
-        '%s %%t/a.out'	
-        % (config.target_build_swift, mcp_opt, swift_tensorflow_extra_options, config.target_codesign, config.target_run))
+    # SWIFT_ENABLE_TENSORFLOW
+    # TODO: Remove when forward mode AD support is robust.
+    config.target_run_simple_swift_forward_mode_differentiation = (
+        '%%empty-directory(%%t) && '
+        '%s %%s -enable-experimental-forward-mode-differentiation -o %%t/a.out %s -module-name main  && '
+        '%s %%t/a.out &&'
+        '%s %%t/a.out'
+        % (config.target_build_swift, mcp_opt, config.target_codesign, config.target_run))
 
 #
 # When changing substitutions, update docs/Testing.md.
@@ -1588,8 +1564,8 @@ config.substitutions.append(('%target-swift-frontend\(mock-sdk:([^)]+)\)',
                              SubstituteCaptures(r'%s \1 %s' % (subst_target_swift_frontend_mock_sdk,
                                                                subst_target_swift_frontend_mock_sdk_after))))
 config.substitutions.append(('%target-swift-frontend', config.target_swift_frontend))
-# SWIFT_ENABLE_TENSORFLOW	
-# TODO: Remove when forward mode AD support is robust.		
+# SWIFT_ENABLE_TENSORFLOW
+# TODO: Remove when forward mode AD support is robust.
 config.substitutions.append(('%target_run_simple_swift_forward_mode_differentiation', config.target_run_simple_swift_forward_mode_differentiation))
 
 config.substitutions.append(('%target-run-simple-swiftgyb', config.target_run_simple_swiftgyb))
