Add swift-tools-support-core to update-checkout-config.json.

--- a/utils/update_checkout/update-checkout-config.json
+++ b/utils/update_checkout/update-checkout-config.json
@@ -282,6 +282,7 @@
                 "swift": "tensorflow",
                 "cmark": "swift-DEVELOPMENT-SNAPSHOT-2019-12-09-a",
                 "llbuild": "swift-DEVELOPMENT-SNAPSHOT-2019-12-09-a",
+                "swift-tools-support-core": "0.0.1",
                 "swiftpm": "swift-DEVELOPMENT-SNAPSHOT-2019-12-09-a",
                 "swift-syntax": "ed002604feb028333e9fe3612cadc8ace8c4e3ec",
                 "swift-stress-tester": "25bf842a7fd6b0b62791231c93e50a9feecbaf77",
