stdlib: build Python, C/TensorFlow everywhere
Unrestrict the build of the Python, CTestoFlow and TensorFlow modules to
all targets.  These are opt-in modules that should just be built
whenever requested.

--- a/stdlib/public/Python/CMakeLists.txt
+++ b/stdlib/public/Python/CMakeLists.txt
@@ -30,7 +30,6 @@ add_swift_target_library(swiftPython ${SWIFT_SDK_OVERLAY_LIBRARY_BUILD_TYPES} IS
   PythonLibrary+Symbols.swift
   NumpyConversion.swift
 
-  TARGET_SDKS OSX CYGWIN FREEBSD LINUX HAIKU
   SWIFT_MODULE_DEPENDS_IOS Darwin
   SWIFT_MODULE_DEPENDS_OSX Darwin
   SWIFT_MODULE_DEPENDS_TVOS Darwin
@@ -39,6 +38,7 @@ add_swift_target_library(swiftPython ${SWIFT_SDK_OVERLAY_LIBRARY_BUILD_TYPES} IS
   SWIFT_MODULE_DEPENDS_FREEBSD Glibc
   SWIFT_MODULE_DEPENDS_CYGWIN Glibc
   SWIFT_MODULE_DEPENDS_HAIKU Glibc
+  SWIFT_MODULE_DEPENDS_WINDOWS MSVCRT
   SWIFT_COMPILE_FLAGS "${SWIFT_RUNTIME_SWIFT_COMPILE_FLAGS}"
   LINK_FLAGS "${SWIFT_RUNTIME_SWIFT_LINK_FLAGS}"
   INSTALL_IN_COMPONENT sdk-overlay
